operatorRole changed to enum